--- a/chat-with-gpt/package.json
+++ b/chat-with-gpt/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.5.0",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "react": "18.2.0",
