--- a/chat-with-gpt/package.json
+++ b/chat-with-gpt/package.json
@@ -12,6 +12,7 @@
     "cookie": "^0.5.0",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.9"
